# libido

./: MANIFEST.in  Makefile  README.mkd  libido.py  setup.cfg
examples/: ex1.py  malformed.py
