[metadata]
name = libido
version = attr: libido.__version__
description = Discover which libs are imported by a set of python files
long_description = file: README.mkd
long_description_content_type = text/markdown
author = Lucas Bourneuf
author_email = lucas@bourneuf.net
url = https://github.com/aluriak/libido
license = GPLv3
keywords = stdlib, static analysis
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
modules = libido
install_requires =
    redbaron==0.9.2
    stdlibs==2022.3.16

[options.entry_points]
console_scripts =
    libido = libido:main

[zest.releaser]
create-wheel = yes
python-file-with-version = libido.py
